--- a/main.css
+++ b/main.css
@@ -66,6 +66,8 @@ body {
 .banner-timer__text {
   font-size: 11px;
   text-align: center;
+      margin-bottom: 3px;
+    text-transform: uppercase;
 }
 .timer {
   font-size: 21px;
